test: update MemoryStoreTest to reflect upsert-not-dedup behavior
The isDuplicate() KNN pre-check was removed from MemoryStore.addDrawer()
in the previous commit. Update the affected tests:
- Remove isDuplicateReturnsFalseForEmptyIndex (method deleted)
- Rename and rewrite duplicateDetectionSkipsIdenticalEmbedding to
  addDrawerWithSameIdOverwritesPreviousEntry, which verifies:
  - same ID → upsert (count stays at 1, non-null result)
  - different ID with identical embedding → both stored (count = 2)

Also fix pre-existing warnings in the test file:
- Convert WriteAheadLog wal field to local variable in setUp()
- Replace results.get(0) → results.getFirst() (Java 21)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>